tests/success/test_bloques_anidados.tds
/*
Este test es correcto
*/
integer inc(integer x){
    return x + 1;
    {
          bool x;
         {

          x = true;
         }
    }
}
// Función Principal.. probaando simbolos en comentarios %$&#!!!
integer main(){
    integer y;
    y = 1;
    {
        integer x;
        x = 2;
        y = x + 1;
    }
    return y;
}
